# OpenTube-Engine.old

./: .gitignore  CMakeLists.txt  Makefile  README.md  nmake.mak  server.conf
libs/ctpp2/: .gitignore  CHANGES  CMakeLists.txt  CTPP2SysHeaders.h.cmake  ClearPackage.cmd  ClearPackage.sh  CodeStyle  Doxyfile  INSTALL  LICENSE  NOTTODO  PKGBUILD  TODO  ctpp2.ebuild  ctpp2.spec
libs/ctpp2/debian/: changelog  control  copyright  ctpp2-dev.install  ctpp2.install  rules
libs/ctpp2/examples/: lebowski-bench-foreach.tmpl  lebowski-bench-loop.tmpl  lebowski-bench.json
libs/ctpp2/include/: CDT.hpp  CDTSortRoutines.hpp  CTPP2BitIndex.hpp  CTPP2CharIterator.hpp  CTPP2Compiler.hpp  CTPP2DTOA.hpp  CTPP2Error.hpp  CTPP2Exception.hpp  CTPP2FileLogger.hpp  CTPP2FileOutputCollector.hpp  CTPP2FileSourceLoader.hpp  CTPP2GlobalDefines.h  CTPP2HashTable.hpp  CTPP2JSONFileParser.hpp  CTPP2JSONParser.hpp  CTPP2Logger.hpp  CTPP2OutputCollector.hpp  CTPP2Parser.hpp  CTPP2ParserException.hpp  CTPP2SimpleCompiler.hpp  CTPP2SimpleVM.hpp  CTPP2SourceLoader.hpp  CTPP2Sprintf.hpp  CTPP2StaticData.hpp  CTPP2StaticText.hpp  CTPP2StreamOutputCollector.hpp  CTPP2StringBuffer.hpp  CTPP2StringIconvOutputCollector.hpp  CTPP2StringOutputCollector.hpp  CTPP2SymbolTable.hpp  CTPP2SysTypes.h  CTPP2SyscallFactory.hpp  CTPP2Util.hpp  CTPP2VM.hpp  CTPP2VMArgStack.hpp  CTPP2VMCodeStack.hpp  CTPP2VMDebugInfo.hpp  CTPP2VMDumper.hpp  CTPP2VMException.hpp  CTPP2VMExecutable.hpp  (+16 more)
libs/ctpp2/include/functions/: CTPP2VMSTDLibFunctions.hpp  FnArrayElement.hpp  FnAvg.hpp  FnBase64Decode.hpp  FnBase64Encode.hpp  FnCast.hpp  FnConcat.hpp  FnDateFormat.hpp  FnDefault.hpp  FnDefined.hpp  FnEmitter.hpp  FnError.hpp  FnFormParam.hpp  FnGetText.hpp  FnGetText_.hpp  FnGetType.hpp  FnHMACMD5.hpp  FnHTMLEscape.hpp  FnHashElement.hpp  FnHostname.hpp  FnHrefParam.hpp  FnIconv.hpp  FnInSet.hpp  FnJSEscape.hpp  FnJSON.hpp  FnListElement.hpp  FnLog.hpp  FnMBSize.hpp  FnMBSubstring.hpp  FnMBTruncate.hpp  FnMD5.hpp  FnMax.hpp  FnMin.hpp  FnNumFormat.hpp  FnNumeral.hpp  FnObjDump.hpp  FnRandom.hpp  FnSize.hpp  FnSprintf.hpp  FnSubstring.hpp  (+6 more)
libs/ctpp2/man/: ctpp2-config.1  ctpp2c.1  ctpp2i.1  ctpp2json.1  ctpp2vm.1
libs/ctpp2/multithread/: CTPP2MT.cpp  hello.tmpl
libs/ctpp2/po/: compile_po.sh  ctpp2.ru_RU.CP1251.po  ctpp2.ru_RU.CP866.po  ctpp2.ru_RU.KOI8-R.po  ctpp2.ru_RU.UTF-8.po  ctpp2.ru_RU.UTF-8.pot
libs/ctpp2/src/: CDT.cpp  CDTSortRoutines.cpp  CTPP2BitIndex.cpp  CTPP2Compiler.cpp  CTPP2DTOA.cpp  CTPP2Error.cpp  CTPP2Exception.cpp  CTPP2FileLogger.cpp  CTPP2FileOutputCollector.cpp  CTPP2FileSourceLoader.cpp  CTPP2HashTable.cpp  CTPP2JSONFileParser.cpp  CTPP2JSONParser.cpp  CTPP2Logger.cpp  CTPP2Parser.cpp  CTPP2ParserException.cpp  CTPP2SimpleCompiler.cpp  CTPP2SimpleVM.cpp  CTPP2Sprintf.cpp  CTPP2StaticData.cpp  CTPP2StaticText.cpp  CTPP2StreamOutputCollector.cpp  CTPP2StringBuffer.cpp  CTPP2StringIconvOutputCollector.cpp  CTPP2StringOutputCollector.cpp  CTPP2SyscallFactory.cpp  CTPP2Util.cpp  CTPP2VM.cpp  CTPP2VMArgStack.cpp  CTPP2VMCodeStack.cpp  CTPP2VMDebugInfo.cpp  CTPP2VMDumper.cpp  CTPP2VMException.cpp  CTPP2VMExecutable.cpp  CTPP2VMFileLoader.cpp  CTPP2VMMemoryCore.cpp  CTPP2VMOpcodeCollector.cpp  CTPP2VMSTDLib.cpp  CTPP2VMSyscall.cpp
libs/ctpp2/src/functions/: FnArrayElement.cpp  FnAvg.cpp  FnBase64Decode.cpp  FnBase64Encode.cpp  FnCast.cpp  FnConcat.cpp  FnDateFormat.cpp  FnDefault.cpp  FnDefined.cpp  FnEmitter.cpp  FnError.cpp  FnFormParam.cpp  FnGetText.cpp  FnGetText_.cpp  FnGetType.cpp  FnHMACMD5.cpp  FnHTMLEscape.cpp  FnHashElement.cpp  FnHostname.cpp  FnHrefParam.cpp  FnIconv.cpp  FnInSet.cpp  FnJSEscape.cpp  FnJSON.cpp  FnListElement.cpp  FnLog.cpp  FnMBSize.cpp  FnMBSubstring.cpp  FnMBTruncate.cpp  FnMD5.cpp  FnMax.cpp  FnMin.cpp  FnNumFormat.cpp  FnNumeral.cpp  FnObjDump.cpp  FnRandom.cpp  FnSize.cpp  FnSprintf.cpp  FnSubstring.cpp  FnTruncate.cpp  (+5 more)
libs/ctpp2/tests/: BitIndexText.cpp  CDTPerfTest.cpp  CDTTest.cpp  CTPP2Compiler.cpp  CTPP2DTOA.cpp  CTPP2Emulator.cpp  CTPP2Interpreter.cpp  CTPP2JSONParser.cpp  CTPP2VMTest.cpp  HashTest.cpp  PERLPerfTest.pl  PHPPerfTest.php  SimpleCompilerTest.cpp  SimpleVMTest.cpp  StaticTextTest.cpp  VMArgStackTest.cpp  VMCodeStackTest.cpp  VMDumperTest.cpp  VMEmulator.cpp
libs/ctpp2/tests/testdata/: arith_ops.tmpl  comparisons.tmpl  formulas.tmpl  function_gettext.tmpl  function_iconv.tmpl  function_md5.tmpl  functions.tmpl  loops.tmpl  output_variables.tmpl  (+1 more)
libs/jemalloc/: .gitignore  CMakeLists.txt  jemalloc.c
libs/mongo-c-driver/: .gitignore  CMakeLists.txt
libs/mongo-c-driver/src/: config.h.in  mongo.c  net.c  net.h  platform.h
src/: CMakeLists.txt  allocator.h  common_functions.c  common_functions.h  common_types.h  config.h  config.h.in  config_parser.c  config_parser.h  core_config.c  core_config.h  core_http.c  core_http.h  core_http_post.c  core_logger.c  core_logger.h  core_process.c  core_process.h  core_server.c  core_server.h  core_web.c  core_web.h  css_preprocessor.c  database.c  database.h  endianness.h  error_page.h  event_wrapper.h  event_wrapper_kqueue.c  event_wrapper_kqueue.h  event_wrapper_select.c  event_wrapper_select.h  file_temporary_storage.c  file_temporary_storage.h  global.h  localization.c  localization.h  main.c  mapped_memory.c  mapped_memory.h  (+26 more)
src/lang/: strings.h  strings.json  update-strings.h.py
src/libs/: mongo.h  pcre.h  zlib.h
src/test_features/: CMakeLists.txt  CheckFunctionExists.cmake  CheckIncludeFile.cmake  CreateProcessWithLogonW.c  s3args.c  s4args.c  s5args.c  s6args.c  select.c
src/web/: callbacks.c  captcha_test.c  compile.list  echo.c  form.c  hello.c  init.c  sleep.c  util.c  util.h  video.c
src/web/callbacks/: callbacks.c  callbacks.c.tpl  callbacks.h  generate-callbacks.c.py  util.c
src/web/opentube/: tpl.h
src/web/utils/: captcha.c  captcha.h  sha1.c  sha1.h  tiger.c  tiger.h
src/windows_installer/: .gitignore  CMakeLists.txt  detect_os.h  get_from_remote_site.cpp  get_from_remote_site.h  install_archive.cpp  install_archive.h  main.cpp  utils.cpp  utils.h  win7_taskbar.h  wizard.cpp  wizard.h
(+90 files in other folders)
